Breadcrumbs text, when too long, starts to overlap onto the fields below [fixDoc#5] [YT AD-649]
spacing and make the site header expand when the breadcrumbs are too long

--- a/src/applications/atom/custom-styles.scss
+++ b/src/applications/atom/custom-styles.scss
@@ -1066,3 +1066,14 @@ body.d-flex {
         display: none;
     }
 }
+
+uq-site-header {
+    &::part(breadcrumb_nav) {
+        padding-right: 4rem; /* leave gap for menu */
+    }
+    [slot] { /* menu goes to far right */
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+}
